@@ -232,6 +232,11 @@ works on a real ST should work also in Hatari</b>.</p>
       <td>Uses sync-scrolling in ST mode and STE HW scrolling in STE mode.</td>
     </tr>
     <tr>
+      <td>Microprose Golf</td>
+      <td>1.7</td>
+      <td>Requires Hatari &gt;= 1.7 to avoid a crash during the game's intro</td>
+    </tr>
+    <tr>
       <td>Metal Mutant</td>
       <td>1.0</td>
       <td>&nbsp;</td>
